--- a/Day1_Project/styles.css
+++ b/Day1_Project/styles.css
@@ -7,7 +7,7 @@
   display: flex;
   align-items: center ;
   height:100vh;
-  
+  justify-content: center;
  overflow:hidden;
   margin:0;
 
@@ -18,16 +18,17 @@
 }
 
 .panel-active{
-  background-size: auto 100%;
+  background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   height:80vh;
   border-radius: 50px;
-  color:white;
+  color:#fff;
   cursor: pointer;
   flex:0.5;
   margin: 10px;
   position:relative;
+  -webkit-transition: all 700ms ease-in;
   transition:flex 0.7s ease-in;
 }
 .panel-active h3{
